# conference

./: .travis.yml  Boost.cmake  CMakeLists.txt  README.md  README.txt
3rd/boost/lib/: libboost_chrono.so.1.48.0  libboost_date_time.so.1.48.0  libboost_filesystem.so.1.48.0  libboost_graph.so.1.48.0  libboost_locale.so.1.48.0  libboost_math_c99.so.1.48.0  libboost_math_c99f.so.1.48.0  libboost_math_c99l.so.1.48.0  libboost_math_tr1.so.1.48.0  libboost_math_tr1f.so.1.48.0  libboost_math_tr1l.so.1.48.0  libboost_prg_exec_monitor.so.1.48.0  libboost_program_options.so.1.48.0  libboost_random.so.1.48.0  libboost_regex.so.1.48.0  libboost_serialization.so.1.48.0  libboost_timer.so.1.48.0  libboost_unit_test_framework.so.1.48.0  libboost_wave.so.1.48.0  libboost_wserialization.so.1.48.0
include/: ConfScheduler.h  Deps.h  DepsBoost.h  DepsStd.h  Session.h  Talk.h  Track.h  Util.h  log.h
src/: '  '\  CMakeLists.txt  ConfSchedular.cpp  Session.cpp  Talk.cpp  Track.cpp  Util.cpp  main.cpp
test/: .UTF.cpp.swo  .testdata.txt.swo  .testdata.txt.swp  CMakeLists.txt  UTF.cpp  testdata.txt  testdata2.txt  testdata60+.txt
